--- a/src/parallelization.Rmd
+++ b/src/parallelization.Rmd
@@ -9,16 +9,13 @@ informs you about the available options. Here we just provide a simple example o
 library("mlrMBO")
 library("parallelMap")
 
-parallelStartMulticore(cpus = 2) # use 2 CPUs
-
-obj.fun = makeMBOFunction(function(x) sum(x^2))
-par.set = makeNumericParamSet(len = 1, id = "x", lower = -10, upper = 10)
+obj.fun = makeSphereFunction(1)
 learner = makeLearner("regr.km", predict.type = "se", covtype = "matern3_2")
-control = makeMBOControl(
-    init.design.points = 5,
-    iters = 3
-)
-res = mbo(obj.fun, par.set, learner = learner, control = control)
+control = makeMBOControl()
+control = setMBOControlTermination(control, iters = 3)
+design = generateDesign(n = 6, par.set = smoof::getParamSet(obj.fun))
 
+parallelStartMulticore(cpus = 2) # use 2 CPUs
+res = mbo(obj.fun, par.set, learner = learner, control = control)
 parallelStop()
 ```
