--- a/vignettes/mlrMBO.Rmd
+++ b/vignettes/mlrMBO.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Quick introduction to mlrMBO"
+title: "mlrMBO: Quick introduction"
 output:
   html_document:
     toc: true
@@ -7,7 +7,7 @@ output:
       collapsed: false
       smooth_scroll: false
 vignette: >
-  %\VignetteIndexEntry{Quick introduction to mlrMBO}
+  %\VignetteIndexEntry{mlrMBO: Quick introduction}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -15,14 +15,36 @@ vignette: >
 ```{r setup, include = FALSE, cache = FALSE}
 library(mlrMBO)
 set.seed(123)
-knitr::opts_chunk$set(cache = TRUE)
+knitr::opts_chunk$set(cache = TRUE, collapse = FALSE, results = 'hold')
+knitr::knit_hooks$set(document = function(x){
+  gsub("```\n*```r*\n*", "", x)
+})
 ```
+
+# mlrMBO: A toolbox for Model-Based Optimization of Expensive Black-Box Functions
+
+This Vignette is supposed to give you a short introductory glance at the key features of `mlrMBO`.
+More detailed and in depth tutorials can be found in the other vignette files on our GitHub project page:
+
+- [Project Page](https://github.com/mlr-org/mlrMBO/)
+- Online documentation of [mlrMBO](https://mlr-org.github.io/mlrMBO/)
+
+## Purpose
+
+The main goal of `mlrMBO` is to optimize *Expensive Black-Box Functions* through *Model-Based Optimization* and to provide a unified interface for different MBO flavours and optimization tasks, namely:
+
+- Efficient global optimization of problems with numerical domain and Kriging as surrogate
+- Multi-criteria optimization using different strategies
+- Allowing arbitary regression models interfacing [mlr](https://github.com/mlr-org/mlr/) to be used as a surrogate
+- Built-in parallelization using multi point proposals
+
+## Quickstart
 
 **This guide gives an overview of the typical optimization workflow with mlrMBO for those familiar with model based optimization.**
 
-# Prerequisites
+### Prerequisites
 
-We demonstrate the functionality of **mlrMBO** by optimizing different test functions.
+We demonstrate the main functionality of **mlrMBO** by optimizing different test functions.
 Instead of writing these function by hand, we make use of the [smoof](https://cran.r-project.org/package=smoof) package which offers many single objective functions frequently used for benchmarking of optimizers.
 [smoof](https://cran.r-project.org/package=smoof) is a dependency and get automatically attached with mlrMBO:
 ```{r load_package}
@@ -31,10 +53,11 @@ library(mlrMBO)
 Note that you are not limited to these test functions bat can define arbitrary black box functions using the constructor `makeSingleObjectiveFunction()`.
 
 
-# Example run: 1d numeric
+### Example run: 1d numeric
 For our simplest example we choose a cosine mixture function:
 ```{r cosine_fun}
 obj.fun = makeCosineMixtureFunction(1)
+obj.fun = convertToMinimization(obj.fun)
 print(obj.fun)
 ggplot2::autoplot(obj.fun, show.optimum = TRUE) # FIXME: optimum is very strange?
 ```
@@ -67,16 +90,18 @@ run = exampleRun(obj.fun, learner = learner, control = control, show.info = FALS
 
 ```{r cosine_plot_examplerun, warning=FALSE}
 print(run)
-plotExampleRun(run, iters = c(1, 3, 10), pause = FALSE)
+plotExampleRun(run, iters = c(1L, 3L, 10L), pause = FALSE)
 ```
 
 
-# Example run: 2d numeric
+### Example run: 2d numeric
 
 We proceed with a slightly more realistic example and optimize the [Branin function](https://www.sfu.ca/~ssurjano/branin.html).
 ```{r branin_fun}
-obj.fun = makeBraninFunction()
-print(obj.fun)
-ggplot2::autoplot(obj.fun, render.levels = TRUE, show.optimum = TRUE)
+obj.fun2 = makeBraninFunction()
+ggplot2::autoplot(obj.fun2, render.levels = TRUE, show.optimum = TRUE)
+run2 = exampleRun(obj.fun2, learner = learner, control = control, show.info = FALSE)
+print(run2)
+plotExampleRun(run2, iters = c(1L, 3L, 10L))
 ```
 
